# gizmo-plugins

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac.patch  makefile.job_submit.patch
default_account/: job_submit_default_account.c
default_qos/: Makefile.am  job_submit_default_qos.c
src/: Makefile  Makefile.am  README  gizmo_defacct.c  job_submit_gizmo_defacct.c
